# 24-point-calculator

./: CMakeLists.txt  README.md  build_and_run.sh  input.txt
src/: calculator.cpp  calculator.h  graph.cpp  main.cpp
